# comfyui-helto-director

./: .gitignore  AGENTS.md  HELTO_PRIVACY_PACKAGE_PLAN.md  IMPROVMENT_PLAN.md  README.md  THIRD_PARTY_NOTICES.md  __init__.py  agents.md  package.json  phase_status.md  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_ROADMAP.md  WAN22_MANUAL_TEST_CHECKLIST.md  WAN22_SUPPORT.md  current_limitations.md  getting_started.md  node_reference.md  picker_setup.md  privacy_keystore.md  privacy_limitations.md  shot_take_sequence_workflow.md  wan_skeleton_status.md
docs/examples/: ltx_phase9_smoke_workflow.md  ltx_timeline_workflow_guide.md
docs/workflows/: README.md  ltx_identity_reference_workflow.json  (+8 more)
nodes/: __init__.py
routes/: __init__.py  global_settings.py  lora_info.py  managed_privacy.py  media_browser.py  media_cache.py  media_privacy.py  privacy.py  prompt_optimizer.py  timeline_library.py
shared/: __init__.py  atomic_write.py  audio.py  media.py  media_browser.py  media_cache.py  media_domain.py  privacy.py  privacy_keystore.py  prompt_optimizer.py  segmented_executor.py  timeline_library.py  timeline_status.py
shared/lora/: config.py  (+3 more)
tests/: __init__.py  conftest.py  synthetic_legacy.py  test_comfyui_loader_import.py  test_director_phase2.py  test_lora_support.py  test_ltx_phase10.py  test_ltx_phase8.py  test_ltx_phase9.py  test_media_browser_phase9.py  test_media_cache_phase7.py  test_phase12_docs_examples.py  test_privacy.py  test_prompt_optimizer.py  test_segmented_executor.py  test_sequence_assembly.py  test_timeline_library.py  test_timeline_phase1.py  test_timeline_take_registration.py  test_wan_bernini.py  test_wan_phase11.py  test_wan_phase13.py  test_wan_phase14.py  test_wan_phase15.py  test_wan_phase16.py
web/: ltx_timeline_theme.js  timeline_lora_configuration.js  video_timeline_director.js  wan_timeline_runtime.js
(+180 files in other folders)
