[project]
name = "comfyui-helto-director"
version = "0.0.1"
description = "Generic ComfyUI video timeline director nodepack scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "helto-privacy @ git+https://github.com/helto4real/helto-privacy.git@b48a67b86fecaa1728fee282b371758756e732ed",
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/helto4real/comfyui-helto-director"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "helto"
DisplayName = "ComfyUI Helto Director"
Icon = ""
web = "web"
