[project]
name = "comfyui-helto-director"
version = "0.0.1"
description = "Generic ComfyUI video timeline director nodepack scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "helto-privacy @ git+https://github.com/helto4real/helto-privacy.git@2e85c71f9aa22bd47ee6f13f2add83d111ab4591",
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/helto4real/comfyui-helto-director"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "helto"
DisplayName = "ComfyUI Helto Director"
Icon = ""
web = "web"
