[project]
name = "comfyui-helto-director"
version = "0.0.5"
description = "Generic ComfyUI video timeline director nodepack scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "helto-privacy==0.4.4",
    "cryptography>=42.0",
]

[project.urls]
Repository = "https://github.com/helto4real/comfyui-helto-director"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "helto"
DisplayName = "ComfyUI Helto Director"
Icon = ""
web = "web"
